# MNIST

./: .gitignore  README.md  pyproject.toml  requirements.txt  secrets.json
.devcontainer/: Dockerfile  Dockerfile.dev  devcontainer.json
.github/workflows/: test.yml
models/: model.ckpt
src/: callbacks.py  clean_dataset.ipynb  colab_notebook.ipynb  data_module.py  data_viz.ipynb  evaluate.ipynb  model.py  prediction.py  train.ipynb
